<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_my"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context="com.jhjj9158.niupaivideo.activity.AccountEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zfb"
            android:textColor="@color/tv_black_my"/>

        <EditText
            android:id="@+id/account_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:textColor="@color/tv_black_my"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/account_explain_1"
        android:textColor="@color/home_tab"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/really_name"
            android:textColor="@color/tv_black_my"/>

        <EditText
            android:id="@+id/account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:textColor="@color/tv_black_my"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/account_explain_2"
        android:textColor="@color/home_tab"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/account_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_confirm_unclick"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/withdraw_affirm"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</LinearLayout>
