<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_my"
              android:orientation="vertical"
              android:paddingTop="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:text="@string/withdraw_title_1"
        android:textColor="@color/tv_black_my"/>

    <RelativeLayout
        android:id="@+id/withdraw_rl_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="20dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/withdraw_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/home_tab"/>

        <ImageView
            android:id="@+id/withdraw_account_edit"
            android:src="@drawable/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/withdraw_title_2"
        android:textColor="@color/tv_black_my"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb_sign"
            android:textColor="@color/tv_black_my"
            android:textSize="26sp"/>

        <EditText
            android:id="@+id/withdraw_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/withdraw_money_hint"
            android:textColor="@color/tv_black_my"
            android:textColorHint="@color/home_tab"
            android:textSize="26sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_my"/>
    </LinearLayout>

    <TextView
        android:id="@+id/withdraw_current_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:textColor="@color/home_tab"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/withdraw_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_confirm_unclick"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/withdraw_affirm"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</LinearLayout>
