<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.jhjj9158.niupaivideo.activity.SearchActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_padding_top"
        android:background="@color/bg_my"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_my"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">

        <EditText
            android:id="@+id/search_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/search_cancel"
            android:background="@drawable/bg_search_input"
            android:drawableLeft="@drawable/icon_seach"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="5dp"
            android:maxLines="1"
            android:textColorHint="@color/button_login"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/search_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:padding="10dp"
        android:id="@+id/search_rl_user"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bg_my">

        <android.support.v7.widget.RecyclerView
            android:layout_centerVertical="true"
            android:id="@+id/search_rv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/search_more">

        </android.support.v7.widget.RecyclerView>

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/search_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_control_point"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/search_nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_nothing"/>
    </RelativeLayout>
</LinearLayout>
